# pynuml

./: .gitignore  .readthedocs.yaml  LICENCE  LICENSE  README.md  h5merge.py  meta.yaml  pyproject.toml  setup.cfg
.github/workflows/: pypi.yml
doc/: README.md  graph_create.md  python_env.md
docs/: conf.py  index.rst  installation.rst  io.rst
docs/install/: installation.rst
docs/modules/: io.rst
docs/source/: conf.py  index.rst
example/: plot.py  process.py
numl/: __init__.py
numl/core/: __init__.py  file.py  out.py
numl/graph/: __init__.py  edges.py
numl/labels/: __init__.py  ccqe.py  standard.py
numl/plot/: __init__.py  graph.py
numl/process/: __init__.py  hitgraph.py  spmap.py  vis.ipynb  visualization.py
pynuml/: __init__.py  meta.yaml  util.py
pynuml/graph/: __init__.py
pynuml/graph/edges/: edges.py
pynuml/io/: __init__.py  file.py  h5interface.py  out.py
pynuml/labels/: __init__.py  flavor.py  pdk.py  simple.py  standard.py
pynuml/plot/: __init__.py  graph.py
pynuml/process/: __init__.py  base.py  hitgraph.py  parallel.py
scripts/: install_ph5concat_conda.sh
src/graph/edges/: edges.py
src/io/: out.py
src/plot/: __init__.py
src/process/: hitgraph.py  spmap.py
src/pynuml/: __init__.py
src/pynuml/core/: __init__.py  file.py  out.py
src/pynuml/graph/: __init__.py
src/pynuml/graph/edges/: __init__.py  edges.py
src/pynuml/labels/: __init__.py  ccqe.py  standard.py
src/pynuml/plot/: graph.py
src/pynuml/process/: __init__.py  hitgraph.py  spmap.py
src/util/: __init__.py  optional.py
tests/: test_process.py
