[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pynuml"
authors = [{name = "v hewes", email = "vhewes@fnal.gov"}]
requires-python = '>=3.7'
readme = "README.md"
license = {file = "LICENSE"}

classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "h5py>=3.7.0",
    "mpi4py",
    "pandas",
    "particle",
    "torch>=1.12.1",
    "torch-geometric>=2.1.0",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/vhewes/pynuml"
