[metadata]
name = numl
version = 0.0.1
author = jeremy hewes
author_email = jhewes15@fnal.gov
description = A package for preprocessing neutrino physics events into ML inputs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jethewes/pynuml
project_urls =
  Bug Tracker = https://github.com/jethewes/pynuml/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OS Approved :: Apache License
  Operating System :: OS Independent

[options]
package_dir =
  = numl
packages = find:
python_requires = >=3.8

[options.packages.find]
where = numl
